# crashrisk

./: .gitignore  README.md  pyproject.toml
.matplotlib/: fontlist-v390.json
data/evaluation/: evaluation_metrics.csv  risk_bin_calibration.csv
docs/: index.html
scripts/: align_data.py  build_network.py  download_data.py  evaluate_model.py  render_map.py  run_pipeline.py  train_gnn.py  training_tables.py
src/crashrisk/: config.py
src/crashrisk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crashrisk/gnn/: dataset.py  model.py
src/crashrisk/ingest/: arcgis.py  regions.py
src/crashrisk/labeling/: align_crashes.py  align_traffic_volume.py  build_training_tables.py  spatial_match.py
src/crashrisk/visualization/: risk_map.py
