[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crashrisk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pandas>=2.2",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "pyarrow>=15.0",
  "osmnx>=1.9",
  "networkx>=3.2",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["crashrisk*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
